--- a/_includes/providers.html
+++ b/_includes/providers.html
@@ -8,7 +8,8 @@
           <div class="mdl-card__title">
             <h2 class="mdl-card__title-text">{{ type.title }}</h2>
           </div>
-          {% for package in type.packages %}
+          {% assign packages = type.packages | sort: 'title' %}
+          {% for package in packages %}
           <div class="mdl-card__actions mdl-card--border">
               <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="{{ package.url }}">{{ package.title }}</a>
           </div>
